Ajustes no arquivo da base scopus para que o parse pudesse ler todos os artigos.

--- a/scopus.bib
+++ b/scopus.bib
@@ -24,7 +24,7 @@ EXPORT DATE: 08 November 2024
 	note = {Cited by: 2; All Open Access, Gold Open Access, Green Open Access}
 }
 
-@ARTICLE{Valli Buttow2022219,
+@ARTICLE{Valli_Buttow2022219,
 	author = {Valli Buttow, Clarissa and Weerts, Sophie},
 	title = {Open Government Data: The OECD's Swiss army knife in the transformation of government},
 	year = {2022},
@@ -453,7 +453,7 @@ EXPORT DATE: 08 November 2024
 	note = {Cited by: 7; All Open Access, Gold Open Access}
 }
 
-@ARTICLE{Mutambik2023,
+@ARTICLE{Mutambik20231,
 	author = {Mutambik, Ibrahim and Lee, John and Almuqrin, Abdullah and Zhang, Justin Zuopeng},
 	title = {Transitioning to Smart Cities in Gulf Cooperation Council Countries: The Role of Leadership and Organisational Culture},
 	year = {2023},
@@ -548,7 +548,7 @@ EXPORT DATE: 08 November 2024
 	note = {Cited by: 0; All Open Access, Gold Open Access}
 }
 
-@ARTICLE{Valli Buttow2022,
+@ARTICLE{Valli_Buttow2022,
 	author = {Valli Buttow, Clarissa and Weerts, Sophie},
 	title = {Public sector information in the European Union policy: The misbalance between economy and individuals},
 	year = {2022},
@@ -710,7 +710,7 @@ EXPORT DATE: 08 November 2024
 	note = {Cited by: 1; All Open Access, Gold Open Access}
 }
 
-@ARTICLE{Mutambik2023,
+@ARTICLE{Mutambik20232,
 	author = {Mutambik, Ibrahim and Lee, John and Almuqrin, Abdullah and Alkhanifer, Abdulrhman and Baihan, Mohammed},
 	title = {Gulf Cooperation Council Countries and Urbanisation: Are Open Government Data Portals Helping?},
 	year = {2023},
@@ -1091,7 +1091,7 @@ EXPORT DATE: 08 November 2024
 	note = {Cited by: 2; All Open Access, Gold Open Access}
 }
 
-@ARTICLE{de Andrade2023,
+@ARTICLE{de_Andrade2023,
 	author = {de Andrade, Morgana Carneiro and Moreno, Maria José Baños and Pastor-Sánchez, Juan-Antonio},
 	title = {DATA QUALITY ON THE WEB: INTEGRATIVE REVIEW OF PUBLICATION GUIDELINES; [QUALIDADE DOS DADOS NA WEB: REVISÃO INTEGRATIVA SOBRE DIRETRIZES PARA PUBLICAÇÃO]},
 	year = {2023},
@@ -1207,7 +1207,7 @@ EXPORT DATE: 08 November 2024
 	note = {Cited by: 0; All Open Access, Bronze Open Access}
 }
 
-@ARTICLE{Wiedenhöft2023,
+@ARTICLE{Wiedenhöft20231,
 	author = {Wiedenhöft, Guilherme Costa and Alexopoulos, Charalampos and Saxena, Stuti and Rizun, Nina and Matheus, Ricardo},
 	title = {Assessing the failure of Open Government Data initiatives in Brazil},
 	year = {2023},
@@ -2628,7 +2628,7 @@ EXPORT DATE: 08 November 2024
 	note = {Cited by: 6; All Open Access, Gold Open Access}
 }
 
-@ARTICLE{de Juana-Espinosa2019,
+@ARTICLE{de_Juana-Espinosa2019,
 	author = {de Juana-Espinosa, Susana and Luján-Mora, Sergio},
 	title = {Open government data portals in the European Union: Considerations, development, and expectations},
 	year = {2019},
@@ -3079,7 +3079,7 @@ EXPORT DATE: 08 November 2024
 	note = {Cited by: 16; All Open Access, Gold Open Access}
 }
 
-@ARTICLE{Purwanto20201,
+@ARTICLE{Purwanto20202,
 	author = {Purwanto, Arie and Zuiderwijk, Anneke and Janssen, Marijn},
 	title = {Citizen Engagement with Open Government Data: A Systematic Literature Review of Drivers and Inhibitors},
 	year = {2020},
@@ -3638,7 +3638,7 @@ EXPORT DATE: 08 November 2024
 	note = {Cited by: 71; All Open Access, Green Open Access}
 }
 
-@ARTICLE{da Silva202157,
+@ARTICLE{da_Silva202157,
 	author = {da Silva, Nádia Felix Felipe and da Silva, Núbia Rosa and Cassiano, Kátia Kelvis and Cordeiro, Douglas Farias},
 	title = {Inference of topics with latent dirichlet allocation for open government data; [Inferência de tópicos para identificação de subáreas temáticas de projetos culturais]},
 	year = {2021},
@@ -4659,7 +4659,7 @@ EXPORT DATE: 08 November 2024
 	note = {Cited by: 44; All Open Access, Green Open Access}
 }
 
-@ARTICLE{Mutambik2021,
+@ARTICLE{Mutambik20211,
 	author = {Mutambik, Ibrahim and Almuqrin, Abdullah and Lee, John and Zhang, Justin Zuopeng and Alomran, Abdulaziz and Omar, Taha and Floos, Ahmad and Homadi, Abdullah},
 	title = {Usability of the G7 open government data portals and lessons learned},
 	year = {2021},
@@ -5131,7 +5131,7 @@ EXPORT DATE: 08 November 2024
 	note = {Cited by: 44; All Open Access, Green Open Access}
 }
 
-@ARTICLE{Welle Donker2017284,
+@ARTICLE{Welle_Donker2017284,
 	author = {Welle Donker, Frederika and van Loenen, Bastiaan},
 	title = {How to assess the success of the open data ecosystem?},
 	year = {2017},
@@ -5250,7 +5250,7 @@ EXPORT DATE: 08 November 2024
 	note = {Cited by: 54; All Open Access, Hybrid Gold Open Access}
 }
 
-@ARTICLE{Van Aggelen2017271,
+@ARTICLE{Van_Aggelen2017271,
 	author = {Van Aggelen, Astrid and Hollink, Laura and Kemman, Max and Kleppe, Martijn and Beunders, Henri},
 	title = {The debates of the European Parliament as Linked Open Data},
 	year = {2017},
@@ -5394,7 +5394,7 @@ EXPORT DATE: 08 November 2024
 	note = {Cited by: 63; All Open Access, Hybrid Gold Open Access}
 }
 
-@ARTICLE{Arquero Avilés201499,
+@ARTICLE{Arquero_Avilés201499,
 	author = {Arquero Avilés, Rosario and Marco Cuenca, Gonzalo},
 	title = {European Union open data portal: Analysis and evaluation; [El portal de datos abiertos de la Unión Europea: Análisis y evaluación]},
 	year = {2014},
@@ -5487,7 +5487,7 @@ EXPORT DATE: 08 November 2024
 	note = {Cited by: 30; All Open Access, Gold Open Access, Green Open Access}
 }
 
-@ARTICLE{Ahmadi Zeleti2016535,
+@ARTICLE{Ahmadi_Zeleti2016535,
 	author = {Ahmadi Zeleti, Fatemeh and Ojo, Adegboyega and Curry, Edward},
 	title = {Exploring the economic value of open government data},
 	year = {2016},
@@ -6012,7 +6012,7 @@ EXPORT DATE: 08 November 2024
 	note = {Cited by: 189; All Open Access, Green Open Access}
 }
 
-@ARTICLE{De Martim2018133,
+@ARTICLE{De_Martim2018133,
 	author = {De Martim, Hudson and Lima, João Alberto De Oliveira and Araujo, Lauro César},
 	title = {Base of Brazilian legal norms: An open government data initiative; [Base de Normas Jurídicas Brasileiras: Uma iniciativa de Open Government Data]},
 	year = {2018},
